<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".SplashActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ai_anim"
        android:layout_width="231dp"
        android:layout_height="222dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297"
        app:lottie_fileName="splash_screen_ai.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/AI"
        android:layout_width="38dp"
        android:layout_height="32dp"
        android:text="@string/ai"
        android:textAlignment="center"
        android:textSize="32dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ai_anim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="@+id/ai_anim"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <TextView
        android:id="@+id/powered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/ai_anim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ai_anim"
        app:layout_constraintVertical_bias="0.934" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mad_app"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ai_anim"
        app:layout_constraintStart_toStartOf="@+id/ai_anim"
        app:layout_constraintTop_toBottomOf="@+id/ai_anim"
        app:layout_constraintVertical_bias="0.743" />

</androidx.constraintlayout.widget.ConstraintLayout>